Fix button spacing for submit and save route

--- a/myapp/src/planning/PathPlanning.css
+++ b/myapp/src/planning/PathPlanning.css
@@ -54,17 +54,14 @@ body {
 
 .start-again-and-save-route-button-container {
     display: flex;
-    justify-content: center; /* Align buttons horizontally */
+    justify-content: space-evenly; /* Align buttons horizontally */
     margin: auto;
-}
-
-.submit-button-container {
-    margin: auto;
+    
 }
 
 .start-again-button-container {
-    margin: auto;
     justify-content: center;
+    margin: auto;
     padding-top: 1rem;
     padding-bottom: 1rem;
 }
